--- a/style.css
+++ b/style.css
@@ -49,5 +49,13 @@ label{
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 10px 2px rgb(0, 0, 0, 0.8);
+    color: var(--light);
+    text-shadow: var(--text-shadow);
+    border-radius: 5px;
     
+}
+.element:hover{
+    cursor: pointer;
+    box-shadow: inset 0 0 1px 5px var(--dark);
+    background-color: var(--dark);
 }
